--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,17 +1,20 @@
-# Use the Node.js base image
+# Use the official Node.js image as the base
 FROM node:latest
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json to the working directory
+# Copy package.json and package-lock.json (if using npm)
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the entire client application code to the working directory
+# Copy the rest of the app's source code
 COPY . .
 
-# Set the command to start the client application
-CMD [ "node", "index.js" ]
+# Build the app
+RUN npm run build
+
+# Set the command to start the app
+CMD ["npm", "start"]
